--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "@popperjs/core": "^2.9.2",
+    "ajv": "^6.9.1",
+    "ajv-keywords": "^3.5.2",
     "boostrap": "^2.0.0",
+    "bootstrap": "^5.0.2",
+    "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
