--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "@ngmodule/material-carousel": "^0.6.0",
     "@popperjs/core": "^2.9.2",
     "ajv": "^6.9.1",
     "ajv-keywords": "^3.5.2",
