--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.0.2",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.0.18",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
