--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ajv-keywords": "^3.5.2",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.0.2",
+    "eslint": "^7.31.0",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.0.18",
